--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,6 @@
-{{page-title "LiquidityPools"}}
+{{page-title "Liquidity Pools"}}
 
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<Form />
+<Pools />
 
 {{outlet}}
