--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,12 @@
 {{page-title "Liquidity Pools"}}
 
-<Form />
-<br>
-<Pools />
+<header class="flex justify-between items-baseline p-2">
+  <Form />
+  <Info />
+</header>
+
+<section>
+  <Pools />
+</section>
 
 {{outlet}}
