--- a/app/components/pools/index.hbs
+++ b/app/components/pools/index.hbs
@@ -15,13 +15,7 @@
       <th>Your Share</th>
       <th>Volume</th>
       <th>
-        Estimated
-        {{#if this.inputs.weekAverage}}
-          Week
-        {{else}}
-          24 hour
-        {{/if}}
-        Fees
+        Estimated Fees over {{this.inputs.averageOver}} days
       </th>
     </tr>
   </thead>
